; ModuleID = '/home/carl/AnghaBench/Atlas/lib/extr_mysql-proto.c_lua_proto_append_challenge_packet.c'
source_filename = "/home/carl/AnghaBench/Atlas/lib/extr_mysql-proto.c_lua_proto_append_challenge_packet.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@LUA_TTABLE = common dso_local global i32 0, align 4
@protocol_version = common dso_local global i32 0, align 4
@server_version = common dso_local global i32 0, align 4
@thread_id = common dso_local global i32 0, align 4
@capabilities = common dso_local global i32 0, align 4
@charset = common dso_local global i32 0, align 4
@server_status = common dso_local global i32 0, align 4
@challenge = common dso_local global i32 0, align 4
@TRUE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @lua_proto_append_challenge_packet to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @lua_proto_append_challenge_packet(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %5 = load i32*, i32** %2, align 8
  %6 = load i32, i32* @LUA_TTABLE, align 4
  %7 = call i32 @luaL_checktype(i32* %5, i32 1, i32 %6)
  %8 = call i32* (...) @network_mysqld_auth_challenge_new()
  store i32* %8, i32** %4, align 8
  %9 = load i32*, i32** %4, align 8
  %10 = load i32, i32* @protocol_version, align 4
  %11 = call i32 @LUA_IMPORT_INT(i32* %9, i32 %10)
  %12 = load i32*, i32** %4, align 8
  %13 = load i32, i32* @server_version, align 4
  %14 = call i32 @LUA_IMPORT_INT(i32* %12, i32 %13)
  %15 = load i32*, i32** %4, align 8
  %16 = load i32, i32* @thread_id, align 4
  %17 = call i32 @LUA_IMPORT_INT(i32* %15, i32 %16)
  %18 = load i32*, i32** %4, align 8
  %19 = load i32, i32* @capabilities, align 4
  %20 = call i32 @LUA_IMPORT_INT(i32* %18, i32 %19)
  %21 = load i32*, i32** %4, align 8
  %22 = load i32, i32* @charset, align 4
  %23 = call i32 @LUA_IMPORT_INT(i32* %21, i32 %22)
  %24 = load i32*, i32** %4, align 8
  %25 = load i32, i32* @server_status, align 4
  %26 = call i32 @LUA_IMPORT_INT(i32* %24, i32 %25)
  %27 = load i32*, i32** %4, align 8
  %28 = load i32, i32* @challenge, align 4
  %29 = call i32 @LUA_IMPORT_STR(i32* %27, i32 %28)
  %30 = call i32* @g_string_new(i32* null)
  store i32* %30, i32** %3, align 8
  %31 = load i32*, i32** %3, align 8
  %32 = load i32*, i32** %4, align 8
  %33 = call i32 @network_mysqld_proto_append_auth_challenge(i32* %31, i32* %32)
  %34 = load i32*, i32** %4, align 8
  %35 = call i32 @network_mysqld_auth_challenge_free(i32* %34)
  %36 = load i32*, i32** %2, align 8
  %37 = load i32*, i32** %3, align 8
  %38 = call i32 @S(i32* %37)
  %39 = call i32 @lua_pushlstring(i32* %36, i32 %38)
  %40 = load i32*, i32** %3, align 8
  %41 = load i32, i32* @TRUE, align 4
  %42 = call i32 @g_string_free(i32* %40, i32 %41)
  ret i32 1
}

declare dso_local i32 @luaL_checktype(i32*, i32, i32) #1

declare dso_local i32* @network_mysqld_auth_challenge_new(...) #1

declare dso_local i32 @LUA_IMPORT_INT(i32*, i32) #1

declare dso_local i32 @LUA_IMPORT_STR(i32*, i32) #1

declare dso_local i32* @g_string_new(i32*) #1

declare dso_local i32 @network_mysqld_proto_append_auth_challenge(i32*, i32*) #1

declare dso_local i32 @network_mysqld_auth_challenge_free(i32*) #1

declare dso_local i32 @lua_pushlstring(i32*, i32) #1

declare dso_local i32 @S(i32*) #1

declare dso_local i32 @g_string_free(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
